# Lab3Rasterization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  skeleton.cpp
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Rasterization.sln  Rasterization.vcxproj  Rasterization.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
